Fixed visual features like spacing

--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@ body
     font-size: 300%;
     color: #859fc7;
     border-top: 40px;
-    padding-top: 40px;
+    padding-top: 30px;
     text-shadow: 1px 1px grey;
 }
 
@@ -256,6 +256,16 @@ header
     background-blend-mode: color;
 }
 
+.btn:focus
+{
+    color: white;
+}
+
+.btn:focus:active
+{
+    color: #99d6ff;
+}
+
 .description a
 {
     color: #d9d9d9;
@@ -302,9 +312,8 @@ header
 
 .welcome
 {
-    border-top: solid 30px #004d80;
-    border-bottom: solid 20px #004d80;
     background: #004d80;
+    border: solid 10px #004d80;
 }
 
                                         /* ======== SKILLS ======== */
@@ -319,7 +328,7 @@ header
 
 .features h3
 {
-    border-top: solid 40px #b3d9ff;
+    border-top: solid 10px #b3d9ff;
     border-bottom: 30px;
 }
 
@@ -372,6 +381,12 @@ header
     font-size: 17px;
 }
 
+.bullets li
+{
+    line-height: 17px;
+    padding: 5px;
+}
+
                                         /* ======== PROJECTS ======== */
 
 .project-showcase
@@ -400,7 +415,7 @@ header
     align-content: center;
 }
 
-.project-pic img, .overlay
+.project-pic img/*, .overlay*/
 {
     width: 80%;
     height: 80%;
@@ -421,7 +436,7 @@ header
 
 .project
 {
-    padding-top: 40px;
+    padding-top: 10px;
     background: #004d80;
     padding-bottom: 50px;
 }
@@ -453,7 +468,7 @@ header
 
 .modal-pic
 {
-    width: 40%;
+    max-width: 60%;
     max-height: 400px;
     border-radius: 10px;
 }
@@ -462,8 +477,7 @@ header
 
 .resume
 {
-    padding-top: 30px;
-    padding-bottom: 20px;
+    padding-bottom: 35px;
     background: #b3d9ff;
 }
 
@@ -471,6 +485,7 @@ header
 {
     padding: 40px;
     padding-bottom: 10px;
+    font-size: 17px;
 }
 
 .resume a
@@ -510,8 +525,8 @@ header
 
 .contact-me
 {
-    border-top: solid 40px #004d80;
-    border-bottom: solid 50px #004d80;
+    border-top: solid 20px #004d80;
+    border-bottom: solid 10px #004d80;
     background: #004d80;
 }
 
@@ -544,13 +559,33 @@ header
 
 .btn-warning
 {
-    margin: 0px;
+    margin: 0;
 }
 
-.btn-warning:hover, .btn-warning:active, .btn-warning:visited
+.btn1:focus, .btn1:active, .btn1:active:focus  
+{
+    color: white;
+    background-color: #b2c6e6;
+    border-color: #b2c6e6;
+}
+
+.btn2:focus, .btn2:active, .btn2:active:focus  
+{
+    color: white;
+    background-color: #b2c6e6;
+    border-color: #b2c6e6;
+}
+
+.btn-warning:hover, .btn-warning:visited
 {
     color: white;
     background-color: #9fb8e0;
+}
+
+.btn-warning:active:focus
+{
+    color: white;
+    background-color: #8ba9da;
 }
 
 .btn1
@@ -599,7 +634,7 @@ footer
 }
 
                                         /* ======== EXTRA CSS ======== */
-
+/* UGLY REMOVE THESE
 a.anchor {
     display: block;
     position: relative;
@@ -644,5 +679,5 @@ a.anchor {
     top: 50%;
     align-items: center;
 }
-
+*/
 /* Copyright © 2017 Raveena D'Souza */
